CMBSandbox4/src/objects/Scope_Creek__c.object
<CustomObject>
    <description>Analytic Snapshot</description>
    <fields>
        <fullName>Account_Formula__c</fullName>
        <formula>left(Project_Name__c ,FIND(&quot;-&quot;,Project_Name__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_vs_Estimate_Hours__c</fullName>
        <label>Actual vs Estimate (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <label>Estimated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Execution_Time__c</fullName>
        <label>Execution Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Profit_Dollar__c</fullName>
        <label>Profit$</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Profit__c</fullName>
        <label>Profit%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Hours_for_Client__c</fullName>
        <label>Total Hours for Client</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Scope Creek</label>
    <nameField>
        <label>Scope Creek Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scope Creek</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>